# APUE.3E

./: .gitignore  CMakeLists.txt  Makefile  README  module_analysis.md
advio/: Makefile  output.txt
daemons/: Makefile
datafiles/: Makefile
db/: Makefile
environ/: Makefile
exercises/: Makefile
filedir/: Makefile
fileio/: Makefile
intro/: CMakeLists.txt  Makefile
ipc1/: Makefile
ipc2/: Makefile
ipc2/open/: Makefile
ipc2/opend/: Makefile
ipc2/opend.fe/: Makefile
lib/: CMakeLists.txt  Makefile  strerror.c
printer/: Makefile
proc/: Makefile
pty/: Makefile
relation/: Makefile
signals/: Makefile
sockets/: findsvc  makefile  ruptime  ruptime-dg  ruptimed  ruptimed-dg  ruptimed-fd
standards/: Makefile
stdio/: Makefile
termios/: Makefile
threadctl/: Makefile
threads/: Makefile
